--- a/.github/workflows/build-zero2w.yml
+++ b/.github/workflows/build-zero2w.yml
@@ -67,7 +67,7 @@ jobs:
             libgmp3-dev libltdl-dev libncurses5-dev libssl-dev \
             libreadline-dev libtool wget nano patch sudo \
             pkgconf python3 python3-pyelftools xxd zlib1g-dev \
-            subversion swig texinfo unzip rsync
+            subversion swig texinfo unzip rsync xz
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
       - name: Build
@@ -86,7 +86,7 @@ jobs:
 
           ls images
 
-          cd images && pixz *img
+          cd images/v2-hdmi-zero2w/arm && xz -v *img
           
       - name: Upload
         if: needs.prepare_release.outputs.release_id != ''
@@ -95,7 +95,7 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           release_id: ${{ needs.prepare_release.outputs.release_id }}
-          file: "./os/images/*.img.xz*"
+          file: "./os/images/v2-hdmi-zero2w/arm/*.img.xz*"
           draft: false
       - name: Rollback release
         if: failure() && needs.prepare_release.outputs.release_id != ''
